# discord-bible-bot

./: Cargo.toml
migrations/: 20240622202546_init_tables.sql
src/: main.rs
