[package]
name = "discord-bible-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "tracing"] }
dotenv = "0.15.0"
reqwest = "0.12.23"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "standard_framework", "cache", "http", "utils", "builder"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
poise = { version = "0.6.1", default-features = false, features = ["cache"] }
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "json", "tls-native-tls"]}
rusty_time = "1.1.0"
time = "0.3.44"
serde = {version = "1.0.196", features = ["derive"]}
chrono = "0.4.42"

